networking/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
